cmake_minimum_required(VERSION 3.23)
project(CPP_03)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_03

        ### -- EX00 ---
    #        ex00/main.cpp
    #        ex00/ClapTrap.cpp
    #        ex00/ClapTrap.hpp

        ### -- EX01 ---
            ex01/main.cpp
            ex01/ClapTrap.cpp
            ex01/ClapTrap.hpp
            ex01/ScavTrap.cpp
            ex01/ScavTrap.hpp

        ### -- EX02 ---

        ### -- EX03 ---

        )