cmake_minimum_required(VERSION 3.23)
project(CPP_04)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_04

        ### -- EX00 ---
#        ex00/src/main.cpp
#        ex00/src/AAnimal.cpp
#        ex00/incl/AAnimal.hpp
#        ex00/src/Dog.cpp
#        ex00/incl/Dog.hpp
#        ex00/src/Cat.cpp
#        ex00/incl/Cat.hpp
#        ex00/src/WrongAnimal.cpp
#        ex00/incl/WrongAnimal.hpp
#        ex00/src/WrongCat.cpp
#        ex00/incl/WrongCat.hpp

        ### -- EX01 ---
#        ex01/src/main.cpp
#        ex01/src/AAnimal.cpp
#        ex01/incl/AAnimal.hpp
#        ex01/src/Dog.cpp
#        ex01/incl/Dog.hpp
#        ex01/src/Cat.cpp
#        ex01/incl/Cat.hpp
#        ex01/src/WrongAnimal.cpp
#        ex01/incl/WrongAnimal.hpp
#        ex01/src/WrongCat.cpp
#        ex01/incl/WrongCat.hpp
#        ex01/src/Brain.cpp
#        ex01/incl/Brain.hpp

        ### -- EX02 ---
#        ex02/src/main.cpp
#        ex02/src/AAnimal.cpp
#        ex02/incl/AAnimal.hpp
#        ex02/src/Dog.cpp
#        ex02/incl/Dog.hpp
#        ex02/src/Cat.cpp
#        ex02/incl/Cat.hpp
#        ex02/src/WrongAnimal.cpp
#        ex02/incl/WrongAnimal.hpp
#        ex02/src/WrongCat.cpp
#        ex02/incl/WrongCat.hpp
#        ex02/src/Brain.cpp
#        ex02/incl/Brain.hpp

        )
