cmake_minimum_required(VERSION 3.23)
project(CPP_05)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_05

        ### -- EX00 ---
#        ex00/src/main.cpp
#        ex00/src/Bureaucrat.cpp
#        ex00/incl/Bureaucrat.hpp

        ### -- EX01 ---
        ex01/src/main.cpp
        ex01/src/Bureaucrat.cpp
        ex01/incl/Bureaucrat.hpp

        ex01/src/Form.cpp
        ex01/incl/Form.hpp

        ### -- EX01 ---
        )
