cmake_minimum_required(VERSION 3.23)
project(CPP_06)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_06

        ### -- EX00 ---
#        ex00/src/main.cpp
#        ex00/src/Converter.cpp
#        ex00/incl/Converter.hpp

        ### -- EX01 ---
#        ex01/src/main.cpp
#        ex01/src/Serializer.cpp
#        ex01/incl/Serializer.hpp

        ### -- EX02 ---

        ex02/src/main.cpp
        ex02/src/TypeIdentifier.cpp
        ex02/incl/TypeIdentifier.hpp
        )
