cmake_minimum_required(VERSION 3.23)
project(CPP_07)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_07

        ### -- EX00 ---
#        ex00/src/main.cpp
#        ex00/incl/whatever.hpp

        ### -- EX01 ---
        ex01/src/main.cpp
        ex01/incl/iter.hpp

        ### -- EX02 ---


        )
