cmake_minimum_required(VERSION 3.23)
project(CPP_08)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_08

        ### -- EX00 ---
        ex00/src/main.cpp
        ex00/incl/easyfind.hpp

        ### -- EX01 ---
#        ex01/src/main.cpp
#        ex01/src/Span.cpp
#        ex01/incl/Span.hpp

        ### -- EX02 ---
#        ex02/src/main.cpp
#        ex02/incl/MutantStack.hpp
        )
